--- a/eng/packages/http-client-csharp-mgmt/docs/index.mdx
+++ b/eng/packages/http-client-csharp-mgmt/docs/index.mdx
@@ -25,3 +25,7 @@ npm install --save-peer @azure-typespec/http-client-csharp-mgmt
 
 </TabItem>
 </Tabs>
+
+## Emitter usage
+
+[See documentation](./emitter.md)
